# Angler

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO  imgui.ini
AnglerED/: CMakeLists.txt
AnglerED/includes/: AnglerED.h  Application.h  EDBenchmark.h  Mesh.h  Model.h  ModelLoader.h  Shader.h  obj2angler.h  pch.h  scenes.h
AnglerED/includes/Entity/: GLCamera.h  GLEntity.h  GLLight.h  GLMesh.h  GLModel.h
AnglerED/includes/Renderer/: GLEngine.h  GLMaterial.h  Renderer.h  Shader.h  UIEngine.h
AnglerED/includes/SceneManager/: Mesh.h  Model.h  ModelLoader.h  ResourceManager.h  SceneManager.h
AnglerED/includes/Utils/: DataStructures.h  EDMemory.h
AnglerED/includes/Widgets/: Widgets.h
AnglerED/includes/WindowManager/: WindowManager.h
AnglerED/shaders/: base.frag  base.vert
AnglerED/src/: AnglerED.cpp  Application.cpp  Mesh.cpp  Model.cpp  ModelLoader.cpp  glad.c  main.cpp  obj2angler.cpp  scenes.cpp
AnglerED/src/Entity/: GLCamera.cpp  GLEntity.cpp  GLLight.cpp  GLMesh.cpp  GLModel.cpp
AnglerED/src/Renderer/: GLEngine.cpp  GLMaterial.cpp  Renderer.cpp  Shader.cpp  UIEngine.cpp
AnglerED/src/SceneManager/: Mesh.cpp  Model.cpp  ModelLoader.cpp  ResourceManager.cpp  SceneManager.cpp
AnglerED/src/Utils/: EDMemory.cpp
AnglerED/src/Widgets/: Widgets.cpp
AnglerED/src/WindowManager/: WindowManager.cpp
AnglerED/src/imgui/: IMDemo.cpp
AnglerRT/: CMakeLists.txt
AnglerRT/includes/: Benchmark.h
AnglerRT/includes/accelerators/: BVH.h
AnglerRT/includes/core/: AnglerRT.h  Bounds.h  Camera.h  EnvironmentMap.h  Geometry.h  ImageBuffer.h  ImageHandler.h  Material.h  Probe.h  Random.h  Ray.h  Render.h  Scene.h  Shape.h  Texture.h  Utilities.h
AnglerRT/includes/image_formats/: PNG.h  PPM.h
AnglerRT/includes/materials/: Dielectric.h  Emissive.h  Glass.h  Lambertian.h  Metallic.h
AnglerRT/includes/shapes/: Plane.h  Sphere.h  Triangle.h
AnglerRT/src/: AnglerRT.cpp
AnglerRT/src/accelerators/: BVH.cpp
AnglerRT/src/core/: Camera.cpp  EnvironmentMap.cpp  ImageBuffer.cpp  Scene.cpp  Texture.cpp
AnglerRT/src/image_formats/: PNG.cpp  PPM.cpp
AnglerRT/src/materials/: Dielectric.cpp  Emissive.cpp  Glass.cpp  Lambertian.cpp  Metallic.cpp
AnglerRT/src/shapes/: Plane.cpp  Sphere.cpp  Triangle.cpp
docs/: ORGANIZATION.md  USEAGE.md
